--- a/Microservices.csproj
+++ b/Microservices.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.13" />
     <PackageReference Include="Polly" Version="8.1.0" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
