--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-SRU1HB9\\SQLEXPRESS;Database=ShoppingCart;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+  }
 }
