--- a/Api.csproj
+++ b/Api.csproj
@@ -25,4 +25,8 @@
 	  <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Logic\ShoppingCartLogic.csproj" />
+  </ItemGroup>
+
 </Project>
