--- a/Api.csproj
+++ b/Api.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Polly" Version="8.1.0" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
 	  <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
 
