--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-SRU1HB9\\SQLEXPRESS;Database=ShoppingCart;Integrated Security=True"
+    "DefaultConnection": "Server=DESKTOP-SRU1HB9\\SQLEXPRESS;Database=ShoppingCart;Integrated Security=True;TrustServerCertificate=True"
   }
 }
